--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </div> 
     <div>
         <h1>Introduction</h1>
-    <p>HTML is the standard markup language for creating web</p>
+    <p>Im hamza from AIDS dept pursuing in saveetha college
+    </p>
     </div>
     <div>
         <h1>skills</h1>
